Add Docker support and remove unused APIs
Introduce a Dockerfile for multi-stage builds and update compose.yaml for containerized deployment with MySQL. Deprecated the chat history API and related methods for cleaner service logic. Improved code conciseness in mapper and JwtService. Updated README with Docker deployment instructions.